Implement drag and drop

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,8 +7,6 @@ body {
 .App {
   // chiếm trọn chiều cao của màn hình
   height: 100vh;
-  display: grid;
-  grid-template-rows: 40px 50px 1fr;
-  line-height: 1.3rem;
+  overflow: hidden;
   background-color: $board-bg-color;
 }
