--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,11 +1,10 @@
 @import '../../variables';
 
-$appbar-bg-color: #0067a3;
-
 .navbar-app {
-  background-color: $appbar-bg-color;
-  font-size: 1.5rem;
+  height: $header-height;
   padding-left: $gap;
   display: flex;
   align-items: center;
+  background-color: $appbar-bg-color;
+  font-size: 1.5rem;
 }
