--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,13 +1,15 @@
 @import '../../variables';
 
-li.card-item {
+.card-item {
   background-color: white;
   padding: $gap;
   border-radius: $cart-border-radius;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  &:not(:last-child) {
-    margin-bottom: $gap;
-  }
+  cursor: pointer;
+  margin-bottom: $gap;
+  // &:not(:last-child) {
+  //   margin-bottom: $gap;
+  // }
 
   img.card-cover {
     display: block;
