Handle state change when drag and drop

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,4 +9,9 @@ body {
   height: 100vh;
   overflow: hidden;
   background-color: $board-bg-color;
+  color: $text-color;
+  .icon {
+    font-size: 14px;
+    margin-right: 5px;
+  }
 }
