--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -2,7 +2,7 @@
 
 $gap: 10px;
 
-// height: navbar-Menu-height + navbar-height + board-content-height = 99vh
+// height: navbar-Menu-height + navbar-height + board-content-height = 99vh , 1vh for scrollbar
 $header-height: 6vh;
 $navbar-height: 7vh;
 $board-content-height: 86vh;
@@ -12,6 +12,8 @@ $column-footer-height: 36px;
 $column-border-radius: 15px;
 $cart-border-radius: 10px;
 
+// color
+$text-color: #333;
 $board-bg-color: #0079bf;
 $appbar-bg-color: #0067a3;
 $list-bg-color: #ebecf0;
