--- a/client/src/components/BoardContent/BoardContent.scss
+++ b/client/src/components/BoardContent/BoardContent.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 
 .board {
+  display: flex;
   height: $board-content-height;
   overflow-x: auto;
   overflow-y: hidden;
@@ -19,5 +20,20 @@
     background-color: rgba(150, 150, 200, 0.1);
     border: 1px dashed #abc;
     margin: 5px 45px 5px 5px;
+  }
+  .add-new-column {
+    width: 250px;
+    height: 32px;
+    line-height: 32px;
+    padding: 4px 0 4px 15px;
+    cursor: pointer;
+    color: white;
+    margin-left: $gap;
+    font-size: 15px;
+    background-color: hsla(0, 0%, 100%, 0.24);
+    border-radius: $cart-border-radius;
+    &:hover {
+      background-color: hsla(0, 0%, 100%, 0.36);
+    }
   }
 }
