--- a/client/src/components/Column/Column.scss
+++ b/client/src/components/Column/Column.scss
@@ -9,10 +9,9 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
   //   ko thực thi phần tử đầu tiên
   margin-left: $gap;
   // margin-bottom: $gap;
-
+  color: $text-color;
   > * {
     background-color: $list-bg-color;
-    color: #333;
     padding: 0 8px;
   }
   header.column-drag-handle {
@@ -31,6 +30,16 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
     line-height: 36px;
     border-bottom-left-radius: $column-border-radius;
     border-bottom-right-radius: $column-border-radius;
+    color: #888;
+    .footer-actions {
+      margin-left: $gap;
+      cursor: pointer;
+      &:hover {
+        background-color: rgba(213, 214, 224, 0.95);
+        color: $text-color;
+        border-radius: 10px;
+      }
+    }
   }
 
   .card-list {
@@ -54,11 +63,13 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
     .card-ghost {
       transition: transform 0.18s ease;
       transform: rotateZ(5deg);
+      font-weight: bold;
     }
 
     .card-ghost-drop {
       transition: transform 0.18s ease-in-out;
       transform: rotateZ(0deg);
+      font-weight: bold;
     }
 
     .card-drop-preview {
