--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,8 +1,11 @@
+@import '~bootstrap/scss/bootstrap';
 @import './variables';
 
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 14px;
 }
 .App {
   // chiếm trọn chiều cao của màn hình
@@ -12,6 +15,47 @@ body {
   color: $text-color;
   .icon {
     font-size: 14px;
-    margin-right: 5px;
+    margin: 0 5px;
+  }
+
+  .notes-container {
+    margin: 0 15px;
+    padding: 0;
+  }
+
+  // bo di box-shadow cua the input default for bootstrap
+  textarea:focus,
+  textarea.form-control:focus,
+  input.form-control:focus,
+  input[type='text']:focus,
+  input[type='password']:focus,
+  input[type='email']:focus,
+  input[type='number']:focus,
+  [type='text'].form-control:focus,
+  [type='password'].form-control:focus,
+  [type='email'].form-control:focus,
+  [type='tel'].form-control:focus,
+  [contenteditable].form-control:focus {
+    box-shadow: none;
+  }
+
+  .btn:focus,
+  .btn:active {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+  .notes-app {
+    // inherit background-color lop cha
+    background-color: inherit;
+    border: none;
+    font-size: inherit;
+    font-weight: inherit;
+    cursor: pointer;
+    &:focus {
+      background-color: white;
+      border: 1px solid $input-hover-color;
+      // border-radius: 10px;
+    }
   }
 }
