--- a/client/src/components/Column/Column.scss
+++ b/client/src/components/Column/Column.scss
@@ -15,7 +15,7 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
     padding: 0 8px;
   }
   header.column-drag-handle {
-    padding-left: 15px;
+    padding: 5px 8px;
     height: $column-header-height;
     line-height: $column-header-height;
     font-size: 16px;
@@ -23,16 +23,55 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
     border-top-left-radius: $column-border-radius;
     border-top-right-radius: $column-border-radius;
     cursor: pointer;
+    display: flex;
+    .column-title {
+      flex: 90%;
+    }
+    .column-dropdown-actions {
+      flex: 10%;
+      .dropdown {
+        button.dropdown-btn {
+          padding: 0 $gap;
+          font-size: 16px;
+          font-weight: bold;
+          letter-spacing: 1px;
+          background-color: $list-bg-color;
+          border-color: $list-bg-color;
+          color: $text-color;
+          &:after {
+            content: '...';
+            border: none;
+          }
+          &:hover {
+            background-color: darken($list-bg-color, 10);
+            border-color: darken($list-bg-color, 10);
+            border-radius: 8px;
+          }
+        }
+      }
+
+      .dropdown-menu {
+        padding: 0;
+        min-width: 200px;
+        a.dropdown-item {
+          padding: 0.1rem 1rem;
+          font-size: 14px;
+          &:not(:last-child) {
+            border-bottom: 1px solid darken($list-bg-color, 10);
+          }
+        }
+      }
+    }
   }
   footer {
-    padding-left: 10px;
+    padding: 10px 5px;
     height: $column-footer-height;
     line-height: 36px;
     border-bottom-left-radius: $column-border-radius;
     border-bottom-right-radius: $column-border-radius;
     color: #888;
     .footer-actions {
-      margin-left: $gap;
+      margin-left: 5px;
       cursor: pointer;
       &:hover {
         background-color: rgba(213, 214, 224, 0.95);
