--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -37,6 +37,7 @@ body {
   [type='tel'].form-control:focus,
   [contenteditable].form-control:focus {
     box-shadow: none;
+    border: 1px solid $input-hover-color;
   }
 
   .btn:focus,
@@ -54,8 +55,20 @@ body {
     cursor: pointer;
     &:focus {
       background-color: white;
-      border: 1px solid $input-hover-color;
-      // border-radius: 10px;
+
+      border-radius: 10px;
+    }
+  }
+
+  span.cancel-icon {
+    margin-left: $gap;
+    cursor: pointer;
+    i {
+      font-size: 18px;
+      color: $alert-danger;
+      &:hover {
+        color: darken($alert-danger, 12);
+      }
     }
   }
 }
