--- a/client/src/components/Column/Column.scss
+++ b/client/src/components/Column/Column.scss
@@ -67,6 +67,7 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
     padding: 10px 5px;
     height: $column-footer-height;
     line-height: 36px;
+    min-height: $gap;
     border-bottom-left-radius: $column-border-radius;
     border-bottom-right-radius: $column-border-radius;
     color: #888;
@@ -115,6 +116,13 @@ $column-height: calc(#{$board-content-height} - (#{$gap} * 2));
       background-color: rgba(150, 150, 200, 0.1);
       border: 1px dashed #abc;
       margin: 5px;
+    }
+
+    .add-new-card-area {
+      .textarea-enter-new-card {
+        min-height: 54px;
+        max-height: 162px;
+      }
     }
   }
 }
